// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs > Tabs Root > renders with default classes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2"
    data-activation-direction="none"
    data-orientation="horizontal"
    data-slot="tabs"
  />
</DocumentFragment>
`;

exports[`Tabs > TabsContent > renders with default classes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2"
    data-activation-direction="none"
    data-orientation="horizontal"
    data-slot="tabs"
  >
    <div
      class="flex-1 outline-none"
      data-activation-direction="none"
      data-index="0"
      data-orientation="horizontal"
      data-slot="tabs-content"
      id="base-ui-_r_5_"
      role="tabpanel"
      tabindex="0"
    >
      Test Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs > TabsList > renders with default classes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2"
    data-activation-direction="none"
    data-orientation="horizontal"
    data-slot="tabs"
  >
    <div
      class="bg-muted text-muted-foreground inline-flex h-9 w-fit items-center justify-center rounded-lg p-[3px]"
      data-activation-direction="none"
      data-orientation="horizontal"
      data-slot="tabs-list"
      role="tablist"
    />
  </div>
</DocumentFragment>
`;

exports[`Tabs > TabsTrigger > renders with default classes 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2"
    data-activation-direction="none"
    data-orientation="horizontal"
    data-slot="tabs"
  >
    <div
      class="bg-muted text-muted-foreground inline-flex h-9 w-fit items-center justify-center rounded-lg p-[3px]"
      data-activation-direction="none"
      data-orientation="horizontal"
      data-slot="tabs-list"
      role="tablist"
    >
      <button
        aria-disabled="false"
        aria-selected="true"
        class="data-[active]:bg-background dark:data-[active]:text-foreground focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:outline-ring dark:data-[active]:border-input dark:data-[active]:bg-input/30 text-foreground dark:text-muted-foreground inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap transition-[color,box-shadow] focus-visible:ring-[3px] focus-visible:outline-1 disabled:pointer-events-none disabled:opacity-50 data-[active]:shadow-sm [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
        data-active=""
        data-composite-item-active=""
        data-orientation="horizontal"
        data-slot="tabs-trigger"
        id="base-ui-_r_0_"
        role="tab"
        tabindex="0"
        type="button"
      >
        Test Tab
      </button>
    </div>
  </div>
</DocumentFragment>
`;
